# weather-app-server

./: Cargo.toml  README.md  example-config.toml
docs/api/v1/: create-share-code.md  revoke-share-code.md
migrations/2026-05-14-150341-0000_create_share_code_table/: down.sql  up.sql
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/v1/: create_share_code.rs  mod.rs  revoke_share_code.rs
src/org/: mod.rs  share_codes.rs
src/storage/: config.rs  database.rs  mod.rs
